# mcp-cli

./: README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: MCP_APPS.md
src/mcp_cli/agents/: group_store.py
src/mcp_cli/apps/: bridge.py  host.py
src/mcp_cli/chat/: attachments.py  conversation.py  session_store.py
src/mcp_cli/commands/cmd/: cmd.py
src/mcp_cli/commands/plan/: plan.py
src/mcp_cli/config/: defaults.py
src/mcp_cli/dashboard/: server.py
src/mcp_cli/dashboard/static/js/: layout.js
src/mcp_cli/dashboard/static/views/: agent-terminal.html
src/mcp_cli/memory/: store.py
src/mcp_cli/planning/: backends.py  executor.py  tools.py
src/mcp_cli/utils/: loopback_origin.py  url_safety.py
tests/: test_mcp_cli_main_entry.py
tests/agents/: test_group_store.py
tests/apps/: test_bridge.py  test_host.py
tests/chat/: test_attachments.py  test_session_store.py
tests/dashboard/: test_integration.py  test_server_extra.py
tests/memory/: test_store.py
tests/planning/: test_backends.py  test_executor.py
tests/utils/: test_url_safety.py
